--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "react-weather",
   "version": "0.1.0",
+  "main": "server/server.js",
+  "proxy": "http://localhost:4444",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
