cleaned up console and added more test with jest and enzyme

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
     "request": "^2.88.0"
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jest-dom": "^4.0.0",
     "react-test-renderer": "^16.12.0"
   }
